fix: user account details and app menu hidden behind patient chart sidebar

--- a/packages/esm-patient-chart-app/src/root.scss
+++ b/packages/esm-patient-chart-app/src/root.scss
@@ -52,3 +52,7 @@ html[dir='rtl'] {
     margin-left: unset;
   }
 }
+
+:global(#omrs-workspaces-container) {
+  z-index: 8000;
+}
